# PrayDB

./: README.md  index.html  pyproject.toml
Example usage project/: PrayDB-showcase.py
praydb/: index.html
praydb-demo/: index.html
site/: index.html
src/praydb/: __init__.py  cli.py  core.py  praydb-cli
